@@ -3,6 +3,7 @@
 
 * Separates to bt.h and bt.cc.
 * Remove template Clock, use std::chrono::steady_clock.
+* Use printf instead of iostream
 
 0.3.5
 -----
